--- a/danmu/danmu.css
+++ b/danmu/danmu.css
@@ -1,9 +1,13 @@
+body{
+    background-color: salmon;
+}
 .container{
     width: 1000px;
-    margin: 80px auto;
+    margin: 10px auto;
+
     margin-bottom: 0px;
-    background: black;
-    height: 500px;
+    background: yellowgreen;
+    height: 600px;
     border-radius: 5px;
     border: 1px solid salmon;
     position: relative;
@@ -20,7 +24,16 @@
     border-radius: 3px;
     border: 1px solid #e0e0e0;
     margin: 15px;
-    background: salmon;
+    background: rgb(166,228,204);
     color: #fff;
     cursor: pointer;
+}
+footer div{
+    text-align: center;
+    color: white;
+}
+
+footer div span>a{
+    text-decoration: none;
+    color: white;
 }
